#43582 UI: fixed download template and layout overflow

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_people.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_people.scss
@@ -296,11 +296,7 @@ wfm-import-agents {
 	.new-import-job {
 		padding: .4em;
                 max-width: 60em;
-                max-height: 72vh;
-
                 margin-bottom: 2rem;
-
-		transition: all 0.25s ease-in;
 
 		.footer {
 			display: flex;
